--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in: ^5.4.2
   provider: ^6.0.4
   get: ^4.6.5
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
